operations/deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kubemq
  labels:
    app: kubemq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubemq
  serviceName: "kubemq"
  template:
    metadata:
      labels:
        app: kubemq
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: kubemq
          image: kubemq/kubemq-community:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: ./kubemq/config
          ports:
            - name: grpc-port
              containerPort: 50000
              protocol: TCP
            - name: api-port
              containerPort: 8080
              protocol: TCP
            - name: rest-port
              containerPort: 9090
              protocol: TCP
      volumes:
        - name: config-volume
          configMap:
            name: kubemq-config
            items:
              - key: CONFIG
                path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubemq
spec:
  ports:
    - name: grpc-port
      protocol: TCP
      port: 50000
      targetPort: 50000
    - name: api-port
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: rest-port
      protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app: kubemq
